--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,2 +1,95 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 400;
+    color: #5D5D7D;
+}
 
+.wrapper {
+    height: 50vh;
+    width: 50vw;
+}
 
+.container-left {
+    display: inline-block;
+    width: 30%;
+    padding-left: 50%;
+    margin-top: 0%;
+}
+
+.container-right {
+    display: inline-block;
+    background-color: black;
+    height: 50vh;
+    width: 20%;
+    position: absolute;
+}
+
+img {
+    position: relative;
+    top: 0%;
+    right: 0px;
+}
+
+h1 {
+    font-weight: 100;
+    font-size: 60px;
+    line-height: 80px;
+    color: #5D5D7D;
+}
+
+p {
+    font-weight: 0;
+    font-size: 5px;
+    line-height: 10px;
+    color: #5D5D7D;
+    margin: 15px;
+}
+
+button {
+    width: 269px;
+    height: 62px;
+    background: #9499EA;
+    box-shadow: black;
+    border: none;
+    border-radius: 30px;
+    font-size: 24px;
+    line-height: 36px;
+    text-align: center;
+    color: #ffffff;
+    cursor: pointer;
+}
+
+button:hover {
+    opacity: 0.8;
+}
+
+button:active {
+    opacity: 0.5;
+}
+
+a {
+    font-size: 28px;
+    line-height: 40px;
+    color: #5D5D7D;
+    margin-right: 40px;
+    cursor: pointer;
+}
+
+a:nth-child(2) {
+    opacity: 0.4;
+}
+
+a:hover {
+    opacity: 0.6;
+}
+
+a:active {
+    opacity: 0.6;
+}
+
+header {
+    margin: 24px 0 0 57px;
+}
